tests/fixtures/compile_errors/invalid_tuple_field.fe
contract Foo:
  val: (u256, u8)

  pub def foo():
    self.val.item5